<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="title">My Nanodegree Apps!</string>
    <string name="button_spotify">SPOTIFY STREAMER</string>
    <string name="button_scores">SCORES APP</string>
    <string name="button_library">LIBRARY APP</string>
    <string name="button_bigger">BUILD IT BIGGER</string>
    <string name="button_reader">XYZ READER</string>
    <string name="button_capstone">CAPSTONE: MY OWN APP</string>
    <string name="toast_message">This button will launch %1$s</string>
</resources>
