<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:background="@color/main_background"
        tools:context="com.cudaf.myappportfolio.MainActivity">
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <TextView
                android:text="@string/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                style="@style/Title" android:id="@+id/textView"/>
        <Button
                android:id="@+id/button_spotify"
                android:text="@string/button_spotify"
                style="@style/ListButton"
                android:onClick="onClick"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginTop="@dimen/title_vertical_margin"
                android:layout_below="@+id/textView"
                android:layout_alignEnd="@+id/button_capstone"
                android:layout_alignStart="@+id/button_capstone"/>
        <Button
                android:id="@+id/button_scores"
                android:text="@string/button_scores"
                style="@style/ListButton"
                android:onClick="onClick"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_below="@+id/button_spotify"
                android:layout_alignEnd="@+id/button_capstone"
                android:layout_alignStart="@+id/button_capstone"/>
        <Button
                android:id="@+id/button_library"
                android:text="@string/button_library"
                style="@style/ListButton"
                android:onClick="onClick"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_below="@+id/button_scores"
                android:layout_alignEnd="@+id/button_capstone"
                android:layout_alignStart="@+id/button_capstone"/>
        <Button
                android:id="@+id/button_bigger"
                android:text="@string/button_bigger"
                style="@style/ListButton"
                android:onClick="onClick"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_below="@+id/button_library"
                android:layout_alignEnd="@+id/button_capstone"
                android:layout_alignStart="@+id/button_capstone"/>
        <Button
                android:id="@+id/button_capstone"
                android:text="@string/button_capstone"
                style="@style/CapstoneButton"
                android:onClick="onClick"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_below="@+id/button_bigger"/>
    </ScrollView>
</RelativeLayout>
